--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <h2>Nairobi,Kenya</h2>
     <p>Web Developer | Tech Enthusiast | Lifelong Learner</p>
     <main>
-      <button>Github</button>
-      <button>LinkedIn</button>
-      <button>Twitter</button>  
-      <button>Instagram</button>
-      <button>Tiktok</button>
-
+      <ul>
+       <li><button>Github</button></li>
+       <li><button>LinkedIn</button></li>
+        <li><button>Twitter</button></li>
+        <li><button>Instagram</button></li>
+        <li><button>Tiktok</button></li>
+      </ul>
+      
     </main>
 
   </div>
