--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
     <h2>Nairobi,Kenya</h2>
     <p>Web Developer | Tech Enthusiast | Lifelong Learner</p>
     <main>
-      <ul>
-       <li><button>Github</button></li>
-       <li><button>LinkedIn</button></li>
-        <li><button>Twitter</button></li>
-        <li><button>Instagram</button></li>
-        <li><button>Tiktok</button></li>
-      </ul>
-      
+     <a href="http://">Github</a>
+     <a href="http://">LinkedIn</a>
+     <a href="https://www.tiktok.com/@isahotttie?is_from_webapp=1&sender_device=pc">Tiktok</a>
+     <a href="http://">Twitter</a>
+     <a href="http://">Instagram</a>
+    
     </main>
 
   </div>
